tests/valid/variables/multiple_vars.rs
/*
return: 3
*/

main(): i32 {
    a: i64 = 1;
    b: i64 = 2;
    return a + b;
}